--- a/screen-recorder/build.gradle
+++ b/screen-recorder/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
 
 android {
@@ -33,4 +34,15 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
 }
 
-apply from: 'upload.gradle'
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.github.allentsui' //groupId
+                artifactId = 'ScreenRecorder'  //artifactId
+                version = '1.0.1'
+            }
+        }
+    }
+}
